# trueki_friend

./: .env.mock  .gitignore  Dockerfile  Makefile  Pipfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
core/: setup.py
core/models/: __init__.py
core/models/product/: product_model.py
core/models/user/: user_model.py
core/routes/: __init__.py
core/routes/product/: blueprint.py  product.py
core/routes/user/: blueprint.py  login.py  register.py
core/utils/: users.py
